fix workflow syntax

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       matrix: { ruby: ['2.4', '2.5', '2.6', '2.7'] }
 
     env:
-      FRED_KEY: ${{ secret.FRED_KEY }}
+      FRED_KEY: ${{ secrets.FRED_KEY }}
 
     steps:
     - name: Checkout code
