--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix: { ruby: ['2.4', '2.5', '2.6', '2.7', '3.0'] }
+      matrix: { ruby: ['2.7', '3.0', '3.1', '3.2', head] }
 
     env:
       FRED_KEY: ${{ secrets.FRED_KEY }}
